70% de la cobertura total